All_Component_DX/force-app/main/default/objects/Custom_Coverage__c/fields/Included_Service__c.field-meta.xml
<CustomField>
    <fullName>Included_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Reference to Included Service.</description>
    <label>Included Service</label>
    <referenceTo>Service_Contract_Services__c</referenceTo>
    <relationshipLabel>Custom Coverages</relationshipLabel>
    <relationshipName>Custom_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>