All_Component_DX/force-app/main/default/objects/Custom_Coverage__c/fields/Parts_Discount_Not_Covered__c.field-meta.xml
<CustomField>
    <fullName>Parts_Discount_Not_Covered__c</fullName>
    <description>Coverage % to consider when incident is outside permitted counts</description>
    <label>Parts Discount - Not Covered</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>