All_Component_DX/force-app/main/default/objects/Custom_Coverage__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>This field specifies the type of product which is similar to field in Product2 object to find applicable coverage</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wearable</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>