All_Component_DX/force-app/main/default/objects/Custom_Coverage__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field references to the Service Contract on which the custom coverage is applied</description>
    <label>Service/Maintenance Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipLabel>Custom Coverages</relationshipLabel>
    <relationshipName>Custom_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>